<resources>
    <string name="app_name">Calendaration</string>
    <string name="text_view_main">Homework</string>
    <string name="buttomAdd">Add</string>
    <string name="text_view_main2">Doctor</string>
    <string name="text_view_main3">General Meetings</string>
    <string name="text_view_main4">Other</string>
    <string name="Text_name_editAct">Name</string>
    <string name="Text_type_editAct">Type</string>
    <string name="Text_date_editAct">Date</string>
    <string name="Text_hour_editAct">Time</string>
    <string name="Text_location_editAct">Location</string>
    <string name="buttom_save_AddAct">Save</string>
    <string name="buttom_cancel_AddAct">Cancel</string>
    <string name="buttom_save_DelAct">Delete</string>
    <string name="input_calendar">Date</string>
    <string name="name_input">Enter the name</string>
    <string name="input_hour">Hour</string>
    <string name="location_input">Location</string>
    <string name="type_input">Reminder type</string>
    <string-array name="types_array">
        <item>Homework</item>
        <item>Doctor</item>
        <item>Meetings</item>

    </string-array>
</resources>