<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_activity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="351dp"
        android:layout_height="261dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_name_editAct"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ea_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_input"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/spinner_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_type_editAct"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/ea_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:ems="10"
                android:hint="@string/type_input"
                android:spinnerMode="dropdown"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/ea_input_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="40sp"
                android:text="@string/input_calendar"
                android:textColor="#505EAE"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/ea_input_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="40sp"
                android:text="@string/input_hour"
                android:textColor="#5C6AB6"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="68dp">

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_location_editAct"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ea_input_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/location_input"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:onClick="Create"
        android:text="@string/buttom_save_AddAct"
        app:backgroundTint="#4CAF50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="Return"
        android:text="@string/buttom_cancel_AddAct"
        app:backgroundTint="#BA3A3A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>